<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/background"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="232dp"
        android:layout_height="198dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="92dp"
        android:layout_marginTop="17dp"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <EditText
        android:id="@+id/firstname"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="250dp"
        android:ems="10"
        android:hint="First Name"
        android:inputType="textPersonName"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/lastname"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="60dp"
        android:ems="10"
        android:hint="Last Name"
        android:inputType="textPersonName"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/emailaddress"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="240dp"
        android:ems="10"
        android:hint="Email Address"
        android:inputType="textPersonName"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/registerpassword"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="180dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="150dp"
        android:layout_marginTop="170dp"
        android:text="Register"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />

    <Button
        android:id="@+id/registerbutton"
        android:layout_width="290dp"
        android:layout_height="59dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="89dp"
        android:text="Register"
        android:background="#86DBF4"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />
</RelativeLayout>