<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView8"
        android:layout_width="187dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/submitTask"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="112dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="108dp"
        android:layout_marginBottom="462dp"
        android:text="Task Submission"
        android:textColor="#000000"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/descriptionOfTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/submitTask"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="29dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="275dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="input the description of task"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/submitTask"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="29dp"
        android:layout_marginEnd="334dp"
        android:layout_marginBottom="400dp"
        android:text="Title:"
        android:textColor="#000000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/submitTask"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="31dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="322dp"
        android:text="Description:"
        android:textColor="#000000"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/locationOfTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/submitTask"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="29dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="184dp"
        android:ems="10"
        android:hint="input the location of task"
        android:inputType="textPersonName"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/submitTask"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="29dp"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="156dp"
        android:text="Estimated Duration:"
        android:textColor="#000000"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/durationOfTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/submitTask"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="29dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="106dp"
        android:ems="10"
        android:hint="input estimated duration (hours)"
        android:inputType="textPersonName"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/submitTask"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="29dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="77dp"
        android:text="Payment:"
        android:textColor="#000000"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/paymentOfTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/submitTask"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="29dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="34dp"
        android:ems="10"
        android:hint="input the payment of task"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/titleOfTask"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/submitTask"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="29dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="349dp"
        android:ems="10"
        android:hint="input the title of task"
        android:inputType="textPersonName"
        android:textSize="20sp" />

    <Button
        android:id="@+id/submitTask"
        android:layout_width="136dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="123dp"
        android:layout_marginEnd="123dp"
        android:layout_marginBottom="42dp"
        android:backgroundTint="#86DBF4"
        android:text="Submit Task"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/submitTask"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="29dp"
        android:layout_marginEnd="145dp"
        android:layout_marginBottom="234dp"
        android:text="Location:"
        android:textColor="#000000"
        android:textSize="20sp" />

</RelativeLayout>